Update all Via implementations